# Chronopoli

./: .gitignore  CLAUDE.md  README.md
.claude/: launch.json
.github/workflows/: deploy-production.yml  deploy-staging.yml
.planning/: GAP_ANALYSIS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
docs/: 01-aws-infrastructure.md  02-tutor-installation.md  04-districts-configuration.md  06-phase1-launch-checklist.md  Chronopoli_Features_Logic.docx  Chronopoli_Platform_Summary.docx  Chronopoli_Technical_Stack.docx  DEPLOYMENT_HANDBOOK.md  presenton-prompts.md
infrastructure/: production.env.template
infrastructure/extensions/: .env.template  docker-compose.yml
infrastructure/lambdas/: requirements.txt
infrastructure/nginx/: extensions.conf
infrastructure/terraform/: bedrock.tf  cloudfront.tf  eventbridge.tf  ivs.tf  lambda.tf  main.tf  opencast-s3.tf  outputs.tf  production.tfvars.example  rds.tf  route53.tf  s3.tf  ses.tf  sqs.tf  ssm.tf  stepfunctions.tf  textract.tf  (+1 more)
preview/: index.html  server.js
scripts/: backup.sh  configure-tutor.sh  consolidate.sh  deploy.sh  healthcheck.sh  setup-discourse-categories.sh  setup-discourse.sh  setup-districts.sh  setup-opencast.sh  setup-presenton.sh  setup-server.sh
tutor/: config.yml
tutor/plugins/chronopoli/: README.rst  plugin.py  pyproject.toml
tutor/plugins/chronopoli/tutorchronopoli/: plugin.py
tutor/plugins/chronopoli/tutorchronopoli/patches/: openedx-lms-development-settings  openedx-lms-production-settings
tutor/plugins/chronopoli/tutorchronopoli/templates/chronopoli/tasks/lms/: init
(+95 files in other folders)
